# ebert

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.gemini/: gemini-review.toml
.github/workflows/: gemini-dispatch.yml  gemini-invoke.yml  gemini-review.yml  gemini-triage.yml
src/ebert/: __init__.py  cli.py  models.py  review.py
src/ebert/config/: __init__.py  loader.py  settings.py
src/ebert/diff/: __init__.py  extractor.py
src/ebert/output/: __init__.py  formatter.py
src/ebert/providers/: __init__.py  anthropic.py  base.py  detection.py  gemini.py  ollama.py  openai.py  parser.py  prompt.py  registry.py
src/ebert/rules/: __init__.py  base.py  engine.py  registry.py
src/ebert/rules/quality/: __init__.py  commented_code.py  debug.py  todos.py
src/ebert/rules/security/: __init__.py  credentials.py  merge_conflicts.py  secrets.py
src/ebert/rules/style/: __init__.py  function_length.py  line_length.py
tests/: __init__.py  conftest.py  test_cli_engine.py  test_config.py  test_detection.py  test_diff_extractor.py  test_formatter.py  test_providers.py  test_quality_rules.py  test_rules.py  test_security_rules.py  test_style_rules.py
